Fixed scrollbars.

--- a/css/style.css
+++ b/css/style.css
@@ -59,32 +59,32 @@ button {
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--scrollBackground);
-	border: 2px solid var(--regBorder);
+    background: black;
+	border: 2px solid #7a7a7a;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(0deg, var(--scroll1) 0%, var(--scroll2) 50%, var(--scroll3) 100%);
-	border: 2px solid var(--regBorder);
+    background: linear-gradient(0deg, #343434 0%, #3B3B3B 50%, #424242 100%);
+	border: 2px solid #7a7a7a;
 	height: 50px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(0deg, var(--scroll2) 0%, var(--scroll3) 50%, var(--scroll4) 100%);
-	border: 2px solid var(--regBorder);
+    background: linear-gradient(0deg, #3B3B3B 0%, #424242 50%, #545454 100%);
+	border: 2px solid #7a7a7a;
 	height: 50px;
 }
 
 ::-webkit-scrollbar-button:single-button {
-    background-color: var(--scroll2);
-	border: 2px solid var(--regBorder);
+    background-color: #3B3B3B;
+	border: 2px solid #7a7a7a;
 
     display: block;
     background-size: 9px;
     background-repeat: no-repeat;
 }
 ::-webkit-scrollbar-button:single-button:hover {
-    background-color: var(--scroll3);
-	border: 2px solid var(--regBorder);
+    background-color: #424242;
+	border: 2px solid #7a7a7a;
 
     display: block;
     background-size: 9px;
@@ -94,17 +94,17 @@ button {
     height: 16px;
     width: 16px;
     background-position: center 4px;
-    background-image: var(--scrollDecrement);
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(122, 122, 122)'><polygon points='50,00 0,50 100,50'/></svg>");
 }
 ::-webkit-scrollbar-button:single-button:vertical:increment {
     height: 16px;
     width: 16px;
     background-position: center 4px;
-    background-image: var(--scrollIncrement);
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(122, 122, 122)'><polygon points='0,0 100,0 50,50'/></svg>");
 }
 
 ::-webkit-scrollbar-corner {
-	background-color: var(--regBorder);
+	background-color: #7a7a7a;
 }
 
 td {
