--- a/css/system-style.css
+++ b/css/system-style.css
@@ -9,6 +9,52 @@
 	text-size-adjust: none;
 
 }
+.themeTrack::-webkit-scrollbar-track {
+    background: var(--scrollBackground) !important;
+	border: 2px solid var(--regBorder) !important;
+}
+.themeTrack::-webkit-scrollbar-thumb {
+    background: linear-gradient(0deg, var(--scroll1) 0%, var(--scroll2) 50%, var(--scroll3) 100%) !important;
+	border: 2px solid var(--regBorder) !important;
+	height: 50px;
+}
+.themeTrack::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(0deg, var(--scroll2) 0%, var(--scroll3) 50%, var(--scroll4) 100%) !important;
+	border: 2px solid var(--regBorder) !important;
+	height: 50px;
+}
+.themeTrack::-webkit-scrollbar-button:single-button {
+    background-color: var(--scroll2) !important;
+	border: 2px solid var(--regBorder) !important;
+
+    display: block;
+    background-size: 9px;
+    background-repeat: no-repeat;
+}
+.themeTrack::-webkit-scrollbar-button:single-button:hover {
+    background-color: var(--scroll3) !important;
+	border: 2px solid var(--regBorder) !important;
+
+    display: block;
+    background-size: 9px;
+    background-repeat: no-repeat;
+}
+.themeTrack::-webkit-scrollbar-button:single-button:vertical:decrement {
+    height: 16px;
+    width: 16px;
+    background-position: center 4px;
+    background-image: var(--scrollDecrement) !important;
+}
+.themeTrack::-webkit-scrollbar-button:single-button:vertical:increment {
+    height: 16px;
+    width: 16px;
+    background-position: center 4px;
+    background-image: var(--scrollIncrement) !important;
+}
+.themeTrack::-webkit-scrollbar-corner {
+	background-color: var(--regBorder) !important;
+}
+
 .uiHolder {
 	position: absolute;
 	top: 0px;
@@ -16,6 +62,7 @@
 	width: 100%;
 	height: 100%;
 }
+
 .titleHolder {
 	position: absolute;
 	top: 0px;
